[gd_scene load_steps=14 format=2]

[ext_resource path="res://sprites/house/cabinet.png" type="Texture" id=1]
[ext_resource path="res://scripts/cabinet.gd" type="Script" id=2]
[ext_resource path="res://fonts/FutilePro.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://houseUI/houseUIkey_float.tres" type="Animation" id=4]
[ext_resource path="res://sprites/button.png" type="Texture" id=5]
[ext_resource path="res://fonts/futile_font.tres" type="DynamicFont" id=6]
[ext_resource path="res://sounds/button_click.wav" type="AudioStream" id=7]
[ext_resource path="res://sounds/door_creak.wav" type="AudioStream" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13, 13 )

[sub_resource type="DynamicFont" id=2]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.313726 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.145098, 0.145098, 0.164706, 0 )

[node name="cabinet" type="StaticBody2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource( 2 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="collision_shape_2d" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 3 )
shape = SubResource( 1 )

[node name="button" type="TextureRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.784314 )
margin_left = -7.0
margin_top = -30.0
margin_right = 9.0
margin_bottom = -14.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="key" type="Label" parent="button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -8.0
margin_right = 24.0
margin_bottom = 16.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 2 )
text = "F"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="anim" type="AnimationPlayer" parent="."]
autoplay = "key_float"
anims/key_float = ExtResource( 4 )

[node name="cabin_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -1.0

[node name="btn_click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = 8.0

[node name="gui" type="CanvasLayer" parent="."]

[node name="control" type="Control" parent="gui"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="question_lbl" type="Label" parent="gui/control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 18.0
margin_right = -40.0
margin_bottom = -121.0
custom_fonts/font = ExtResource( 6 )
text = "Are you sure you want to go back to the real world?"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_editor_description_": ""
}

[node name="yes" type="Button" parent="gui/control"]
margin_left = 40.0
margin_top = 147.0
margin_right = 159.0
margin_bottom = 167.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="label" type="Label" parent="gui/control/yes"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 6 )
text = "Yeah..."
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="no" type="Button" parent="gui/control"]
margin_left = 161.0
margin_top = 147.0
margin_right = 280.0
margin_bottom = 167.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
__meta__ = {
"_editor_description_": ""
}

[node name="label" type="Label" parent="gui/control/no"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 6 )
text = "No!"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}
[connection signal="pressed" from="gui/control/yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="gui/control/no" to="." method="_on_no_pressed"]
